update vc branch

--- a/vitor/components/buttons/index.html
+++ b/vitor/components/buttons/index.html
@@ -79,7 +79,7 @@
                 <div class="row">
                     <div class="column is-12 is-vertical-top">
                         <h1 class="hero-title-buttons">
-                            Creative color selection buttons!
+                            Selection of creative colored buttons!
                         </h1>
                         <h2 class="hero-subtitle-buttons">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Est itaque cumque earum laboriosam modi velit pariatur voluptates libero ipsam porro?
