--- a/vitor/components/forms/index.html
+++ b/vitor/components/forms/index.html
@@ -73,15 +73,15 @@
         </nav>
     </header>
 
-    <main class="buttons-page">
-        <section class="hero-buttons">
+    <main class="forms-page">
+        <section class="hero-forms">
             <div class="container">
                 <div class="row">
                     <div class="column is-12 is-vertical-top">
-                        <h1 class="hero-title-buttons">
+                        <h1 class="hero-title-forms">
                             Forms
                         </h1>
-                        <h2 class="hero-subtitle-buttons">
+                        <h2 class="hero-subtitle-forms">
                             All form inputs for all sorts of uses!
                         </h2>
                     </div>
