--- a/vitor/components/table/index.html
+++ b/vitor/components/table/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Resgate Passowrd | SPLASH</title>
+        <title>Table | SPLASH</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
-        <link rel="stylesheet" href="css/all.css" />
+        <link rel="stylesheet" href="../../css/all.css" />
     </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="logo-container">
             <a href="index.html">
                 <figure class="logo">
-                    <img src="images/splash_logo.png" alt="Splash logo">
+                    <img src="../../images/splash_logo.png" alt="Splash logo">
                     <span class="page-title">
                         Splash
                     </span>
@@ -29,95 +29,77 @@
         <nav class="menu">
             <ul class="menu-list">
                 <li class="menu-item">
-                    <a href="index.html">Home</a>
+                    <a href="../../index.html">Home</a>
                 </li>
                 <li class="menu-item">
-                    <a href="products/index.html">Products</a>
+                    <a href="../../products/index.html">Products</a>
                 </li>
                 <li class="menu-item">
-                    <a href="dashboard.html">Dashboard</a>
+                    <a href="../../dashboard.html">Dashboard</a>
                 </li>
                 <li class="menu-item-expandable">
                     <span>Components</span>
                     <ul class="menu-dropdown menu-list">
                         <li class="dropdown-item">
-                            <a href="../components/buttons/index.html">Buttons</a>
+                            <a href="../../components/buttons/index.html">Buttons</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="../components/cards/index.html">Cards</a>
+                            <a href="../../components/cards/index.html">Cards</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="../components/forms/index.html">Forms</a>
+                            <a href="../../components/forms/index.html">Forms</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="../components/grid/index.html">Grid</a>
+                            <a href="../../components/grid/index.html">Grid</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="../components/sidebar/index.html">Sidebar</a>
+                            <a href="../../components/sidebar/index.html">Sidebar</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="../components/slider/index.html">Slider</a>
+                            <a href="../../components/slider/index.html">Slider</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="../components/table/index.html">Table</a>
+                            <a href="../../components/table/index.html">Table</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="../components/tabs/index.html">Tabs</a>
+                            <a href="../../components/tabs/index.html">Tabs</a>
                         </li>
                     </ul>
                 </li>
                 <li class="menu-item-login">
-                    <a href="login.html" class="button is-sucess is-small" style="margin-left: 16px;">Login</a>
+                    <a href="../../login.html" class="button is-sucess is-small" style="margin-left: 16px;">Login</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main class="resgate-password-page">
-        <div class="container is-small">
-            <section class="login-section">
-              <div class="card">
-                <div class="card-content">
-                  <h3 class="title is-4">Register</h3>
-                  <h4 class="subtitle-is-5">Sign up for a free account today</h4>
-                  <hr>
-                  <form class="form login-form">
-                    <div class="field">
-                      <label for="input-name">Password</label>
-                      <input type="password" id="input-password" name="input_password"
-                        placeholder="Please insert your password" class="input">
-                      <span class="message is-info">
-                        <i class="fas fa-exclamation-circle"></i>
-                        Your password must contain at least 1 character
-                      </span>
+    <main class="table-page">
+        <section class="hero-table">
+            <div class="container">
+                <div class="row">
+                    <div class="column is-12 is-vertical-top">
+                        <h1 class="hero-title-table">
+                            Creative tables selection!
+                        </h1>
+                        <h2 class="hero-subtitle-table">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est itaque cumque earum laboriosam modi velit pariatur voluptates libero ipsam porro?
+                        </h2>
                     </div>
-                    <div class="field">
-                      <label for="input-name">Confirm password</label>
-                      <input type="password" id="input-password-confirm" name="input_password_confirm"
-                        placeholder="Please re-insert your password" class="input">
-                      <span class="message is-danger">
-                        <i class="fas fa-exclamation-circle"></i>
-                        Your passwords must match
-                      </span>
-                    </div>
-      
-                    <div class="buttons is-spaced-between">
-                      <a href="index.html" type="button" class="button is-primary">
-                        Register
-                      </a>
-                    </div>
-                  </form>
                 </div>
-              </div>
-            </section>
-          </div>
+                <hr style="width:20%; border: 2px solid; margin-left: 0.2%; margin-bottom: 6%;">
+            </div>
+        </section>
+
+        <section class="table-page">
+            
+        </section>
     </main>
     
     <footer class="footer">
         <nav class="footer-nav">
             <div class="column is-3">
                 <figure class="logo">
-                    <img src="images/splash_logo.png" alt="Splash Logo">
+                    <img src="../../images/splash_logo.png" alt="Splash Logo">
                     <div class="page-title">
                         Splash
                     </div>
