--- a/vitor/scss/components/_buttons.scss
+++ b/vitor/scss/components/_buttons.scss
@@ -115,9 +115,7 @@ $button-text-color:#fff;
 }
 
 
-/*
- Page specific styles, not to be used in component
-*/
+/*  Page specific styles, not to be used in component */
 
 
 
