--- a/vitor/components/grid/index.html
+++ b/vitor/components/grid/index.html
@@ -78,10 +78,10 @@
             <div class="container">
                 <div class="row">
                     <div class="column is-12 is-vertical-top">
-                        <h1 class="hero-title-buttons">
+                        <h1 class="hero-title-grid">
                             Flex Box
                         </h1>
-                        <h2 class="hero-subtitle-buttons">
+                        <h2 class="hero-subtitle-grid">
                             Flexbox examples, is-1 to is-12.
                         </h2>
                     </div>
