--- a/Carlos/components/cards/cards.html
+++ b/Carlos/components/cards/cards.html
@@ -23,28 +23,36 @@
                 </span>
             </figure> 
         </a>
-           <nav class="navbar">
-               <ul class="menu-list">
-                    <li class="menu-item">
-                        <a href="../../products/products.html">Products</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="../buttons/buttons.html">Buttons</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="cards.html">Cards</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="../forms/index.html">Forms</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="../sidebar/dashboard.html">Sidebar</a>
-                    </li>     
-                    <li class="menu-item">
-                        <a href="../../register.html" class="button is-success">Login</a>
-                    </li>   
-               </ul>
-           </nav>
+        <nav class="navbar">
+            <ul class="menu-list">
+                 <li class="menu-item">
+                     <a href="../../index.html">Home</a>
+                 </li>
+                 <li class="menu-item">
+                     <a href="../../products/products.html">Products</a>
+                 </li>
+                 <li class="menu__item--expandable">
+                     <span>Components</span>
+                     <ul class="menu__dropdown menu__list">
+                         <li class="dropdown__item">
+                             <a href="../buttons/buttons.html">Buttons</a>
+                         </li>
+                         <li class="dropdown__item">
+                             <a href="cards.html">Cards</a>
+                         </li>
+                         <li class="dropdown__item">
+                             <a href="../forms/index.html">Forms</a>
+                         </li>
+                         <li class="dropdown__item">
+                             <a href="../sidebar/dashboard.html">Sidebar</a>
+                         </li>
+                     </ul>
+                 </li>   
+                 <li class="menu-item">
+                     <a href="../../register.html" class="button is-success">Login</a>
+                 </li>   
+            </ul>
+        </nav>
     </header>
       <div class="container">
         <section class="main-section">
