--- a/jose/scss/components/_variables.scss
+++ b/jose/scss/components/_variables.scss
@@ -5,15 +5,20 @@ $h1-font-size: '';
 $h2-font-size: '';
 $h3-font-size: '';
 
-$text:#04050A;
+$black:#171718;
+$grey:#64666d;
+$dark:#1f2022;
+$text:#2e2f32;
 
 $background-color:'';
 $gutter-spacing:'';
 
 $primary:#665df5;
-$success:#4CAF50;
+$success:#0bb783;
 $danger:#f44336;
 $warning:#ff9800;
 $info: $primary;
+
+$aqualight: #f3f6f9;
 
 $radius:4px;
