--- a/jose/css/dashboard.css
+++ b/jose/css/dashboard.css
@@ -97,5 +97,142 @@
 body.sidebar-open {
   padding-left: 60px; }
 
+.tags {
+  display: flex; }
+
+.tag {
+  padding: 8px;
+  border-radius: 8px;
+  height: 35px;
+  font-weight: 600; }
+  .tag.is-primary {
+    background-color: #665df5;
+    color: #fff; }
+  .tag.is-aqualight {
+    color: #0bb783;
+    background: #C9F7F4; }
+  .tag.is-yellow {
+    background-color: #ff9800;
+    color: #000; }
+
 .vertical-nav__logo {
   margin-bottom: 32px; }
+
+.sales .column:nth-child(1) .sales__icon {
+  background: #EDE5FF;
+  color: #8951FC; }
+
+.sales .column:nth-child(2) .sales__icon {
+  background: #C9F7F4;
+  color: #18C5BD; }
+
+.sales .column:nth-child(3) .sales__icon {
+  background: #FEE2E4;
+  color: #F64E60; }
+
+.sales .column:nth-child(4) .sales__icon {
+  background: #D7F9EE;
+  color: #0BB783; }
+
+.activities {
+  position: relative; }
+  .activities:before {
+    content: "";
+    position: absolute;
+    left: 64px;
+    width: 4px;
+    top: 0;
+    bottom: 0;
+    background-color: #ebedf3; }
+  .activities .activity:nth-child(1) .activity__dot {
+    color: #665df5; }
+  .activities .activity:nth-child(2) .activity__dot {
+    color: #ff9800; }
+  .activities .activity:nth-child(3) .activity__dot {
+    color: #f44336; }
+  .activities .activity__dot {
+    z-index: 1; }
+    .activities .activity__dot .icon {
+      display: block;
+      background-color: #fff;
+      margin-top: -4px;
+      padding: 4px 8px; }
+
+.todo {
+  margin-top: 30px; }
+  .todo .subtitle {
+    margin-bottom: 0; }
+  .todo .todo__border {
+    border-left: 4px solid #0BB783; }
+  .todo .todo__color {
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin: 20px;
+    background: #9fbdbb;
+    border-radius: 4px; }
+  .todo .media-content {
+    width: 100%; }
+
+.arrivals__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center; }
+  .arrivals__list li {
+    padding: 0;
+    width: 100%; }
+    .arrivals__list li:not(:last-child) {
+      margin-right: 10px; }
+    .arrivals__list li:last-child {
+      justify-self: flex-end; }
+    .arrivals__list li .buttons {
+      justify-content: flex-end; }
+  .arrivals__list .buttons {
+    margin: 0; }
+  .arrivals__list .media-left .image {
+    width: 60px;
+    height: 60px;
+    padding: 15px;
+    background: #ebedf3;
+    border-radius: 8px; }
+
+.button.sales__dropdown {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  width: auto;
+  min-width: 0;
+  min-height: 0;
+  height: auto;
+  border: none;
+  padding: 4px;
+  color: #9fbdbb;
+  font-size: 20px; }
+
+.sales__type {
+  font-size: 14px;
+  margin-bottom: 0; }
+
+.sales__price {
+  font-weight: 800; }
+
+.sales__icon {
+  width: 45px;
+  display: block;
+  height: 45px;
+  line-height: 45px;
+  text-align: center;
+  padding: 0; }
+
+.media {
+  display: flex; }
+  .media:not(:last-child) {
+    margin-bottom: 20px; }
+
+.media-left + .media-content {
+  margin-left: 10px; }
+
+.media-content + .media-right {
+  margin-left: 10px; }
