--- a/jose/scss/main.scss
+++ b/jose/scss/main.scss
@@ -25,7 +25,7 @@ main{
   clear:both;
 }
 
-section{
+.section{
   margin:32px 16px;
 }
 
@@ -33,8 +33,76 @@ section{
   background-color: $primary;
 }
 
-.has-text-primary {
+/*
+  Helpers
+*/
+
+.margin--none{
+  margin:0!important;
+}
+.margin-b--5{
+  margin-bottom:5px!important;
+}
+.margin-t--40{
+  margin-top:40px!important;
+}
+
+.has-text-green{
+  color:#4e9400;
+}
+
+.lead{
+  font-size:18px;
+  margin-bottom:10px;
+}
+
+.width--75{
+  width:75%;
+}
+
+.background--red{
+  background:$danger;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,p{
+    color:#fff;
+  }
+  p{
+    opacity:.6;
+  }
+}
+
+.text{
+  color:$text;
+}
+
+.text--primary {
   color: $primary;
+}
+
+.text--grey {
+  color: $grey;
+}
+
+.text--dark {
+  color: $dark;
+}
+.text--black {
+  color: $black;
+}
+
+.text--success{
+  color:$success;
+}
+.text--uppercase{
+  text-transform: uppercase;
+}
+
+.text--strong {
+  font-weight: 800;
 }
 
 figure {
@@ -42,31 +110,66 @@ figure {
 }
 
 .image img{
+  display:block;
   max-width:100%;
 }
 
 .title {
   margin: 0 0 16px;
-  font-weight: 300;
+  font-weight: 400;
   &.is-1 {
     font-size: 64px;
     font-weight:800;
+    + .subtitle {
+      font-size: 48px;
+    }
   }
   
   &.is-2 {
-    font-size: 32px;
+    font-size: 48px;
+    + .subtitle {
+      font-size: 32px;
+    }
   }
   
   &.is-3 {
-    font-size: 24px;
+    font-size: 32px;
+    + .subtitle {
+      font-size: 28px;
+    }
   }
   
+  &.is-4 {
+    font-size: 28px;
+    + .subtitle {
+      font-size: 24px;
+    }
+  }
+
   &.is-5 {
+    font-size: 24px;
+    + .subtitle {
+      font-size: 20px;
+    }
+  }
+  
+  &.is-6 {
     font-size: 20px;
+    + .subtitle {
+      font-size: 16px;
+    }
+  }
+  
+  &.is-7 {
+    font-size: 16px;
+    + .subtitle {
+      font-size: 14px;
+    }
   }
   
   ~.subtitle {
     margin-top: -16px;
+    color:#4a4d57;
   }
   
 }
@@ -265,14 +368,6 @@ figure {
   margin: 0 auto;
 }
 
-.card {
-  background: #fff;
-}
-
-.card>.card-content {
-  padding: 32px;
-}
-
 .product-card .card-content{
   display: flex;
   justify-content: space-between;
@@ -375,10 +470,3 @@ figure {
 } */
 
 
-/*
-  Helpers
-*/
-
-.has-text-green{
-  color:#4e9400;
-}
