--- a/tvieira/Components/header/index.html
+++ b/tvieira/Components/header/index.html
@@ -24,32 +24,46 @@
         </figure>
     </a>
 
-    <nav class="navbar">
-        <ul class="menu-list">
-            <li class="menu-item">
-                <a href="/tvieira/components/buttons/index.html" target="_blank">Buttons</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/components/cards/index.html" target="_blank">Cards</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/components/forms/index.html" target="_blank">Forms</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/components/sidebar/index.html" target="_blank">Sidebar</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/components/grid/index.html" target="_blank">Grid</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/dashboard/index.html" target="_blank">Dashboard</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/products/product-1.html" target="_blank">Product-1</a>
-            </li>
-            <li class="menu-item">
-                <a href="/tvieira/login.html" class="button is-primary-black is-small" style="margin-left:16px;" target="_blank">Login</a>
-            </li>
+    <nav class="menu">
+        <ul class="menu__list">
+          <li class="menu__item--active">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="menu__item">
+            <a href="products/index.html">Products</a>
+          </li>
+          <li class="menu__item">
+            <a href="dashboard.html">Dashboard</a>
+          </li>
+          <li class="menu__item--expandable">
+            <span>Components</span>
+            <ul class="menu__dropdown menu__list">
+              <li class="dropdown__item">
+                <a href="components/cards/index.html">Cards</a>
+              </li>
+              <li class="dropdown__item">
+                <a href="components/forms/index.html">Forms</a>
+              </li>
+              <li class="dropdown__item">
+                <a href="components/grid/index.html">Grid</a>
+              </li>
+              <li class="dropdown__item">
+                <a href="components/sidebar/index.html">Sidebar</a>
+              </li>
+              <li class="dropdown__item">
+                <a href="components/table/index.html">Table</a>
+              </li>
+              <li class="dropdown__item">
+                <a href="components/tabs/tabs.html">Tabs</a>
+              </li>
+              <li class="dropdown__item">
+                <a href="components/slider/index.html">Slider</a>
+              </li>
+            </ul>
+          </li>
+          <li class="menu__item">
+            <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
+          </li>
         </ul>
-    </nav>
+      </nav>
     </header>
